Fix warning of commit miw-upm/goa#43